# rfgen

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: analysis_example.py  asphalt_aggregates.py  construct_image.py  generation_example.py  psd_pdf_control_example.py  roughness_examples.py  voronoi_surface.py
src/rfgen/: __init__.py
src/rfgen/analysis/: __init__.py  autocorrelation.py  moments.py  spectrum.py
src/rfgen/generators/: __init__.py  matern.py  pdf_psd_control.py  selfaffine.py
tests/: __init__.py  test_analysis.py  test_generators.py  test_pdf_psd.py
